--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Projects from './_components/Projects'
 <Layout title="Adamson Vispo">
 	<main class="w-full grid grid-rows-1 place-items-center scroll-smooth max-w-[1140px] px-[15px]">
     <Greetings />
-    <Projects />
+    <Projects client:load/>
   </main>
 </Layout>
 <style lang="scss">
