--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,10 @@ import AboutMe from './_components/AboutMe'
 ---
 
 <Layout title="Adamson Vispo">
-	<main class="w-full grid grid-rows-1 place-items-center scroll-smooth max-w-[1140px] px-[15px]">
+	<main class="w-auto grid grid-rows-1 place-items-center scroll-smooth max-w-[1140px] px-[15px]">
     <Greetings />
     <Projects client:load></Projects>
-    <!-- <AboutMe client:load></AboutMe> -->
+    <AboutMe client:load></AboutMe>
   </main>
 </Layout>
 <style lang="scss">
